--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <p class="username">@IMSB10</p>
     
-      <p class="description">I create <a href="https://urlgeni.us/youtube/f35Q"></a>
+      <p class="description">I create <a href="https://urlgeni.us/youtube/f35Q">
         <span class="modify">music!</span>
       </p>
     </a>
